[doc] Format bbcbasic_to_text.pdf from bbcbasic_to_text.1.

--- a/doc/bbcbasic.5
+++ b/doc/bbcbasic.5
@@ -1,4 +1,4 @@
-.TH "BBC BASIC" 5 2020-05-05 \" -*- nroff -*-
+.TH "BBC BASIC" 5 2020-05-05 Youngman \" -*- nroff -*-
 
 .SH SYNOPSIS
 Some implementations of BBC BASIC store saved programs in a tokenised
