--- a/doc/bbcbasic_to_text.1
+++ b/doc/bbcbasic_to_text.1
@@ -1,5 +1,5 @@
 '\" t
-.TH BBCBASIC_TO_TEXT 1 \" -*- nroff -*-
+.TH BBCBASIC_TO_TEXT 1 2020-05-02 Youngman \" -*- nroff -*-
 
 .SH NAME
 bbcbasic_to_text \- convert a saved BBC BASIC program to text
