[doc] Fix section ordering, clarify dialect descriptions.

--- a/doc/bbcbasic.5
+++ b/doc/bbcbasic.5
@@ -839,15 +839,25 @@ Out-of-order line numbers
 It's possible that not all implementations support the full range of
 theoretically-representable line numbers.
 
-.SH "SEE ALSO"
-\fBbbcbasic_to_text\fP(1)
-
-http://www.rtrussell.co.uk/
-
-http://mdfs.net/Docs/Comp/BBCBasic/Tokens
-
-http://mdfs.net/Docs/Comp/BBCBasic/Line
-
 .SH BUGS
 Please report inaccuracies or other defects in this document to
 james@youngman.org.
+
+.SH "SEE ALSO"
+\fBbbcbasic_to_text\fP(1)
+
+.UR http://www.bbcbasic.co.uk/bbcbasic.html
+BBC BASIC Website
+.UE
+.br
+
+.UR http://mdfs.net/Docs/Comp/BBCBasic/Tokens
+BBC BASIC Tokens
+.UE
+version 1.16, J. G. Harston, 2013-07-29
+
+.UR http://mdfs.net/Docs/Comp/BBCBasic/Line
+BBC BASIC Line formats, collected by J. G. Harston
+.UE
+.br
+
