[dfs] renamed the sector_map command sector-map for consistency.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -6,7 +6,7 @@ dfs \- read Acorn DFS disc images
 
 .SH SYNOPSIS
 .B dfs
-[\-\-file image.ssd] [\-\-dir D] cat|dump|extract\-files|extract\-unused|free|help|info|list|sector_map|space|type
+[\-\-file image.ssd] [\-\-dir D] cat|dump|extract\-files|extract\-unused|free|help|info|list|sector\-map|space|type
 [args...]
 
 .SH DESCRIPTION
@@ -203,7 +203,7 @@ see the
 .B EXAMPLES
 section.
 
-.SS "sector_map [drive]"
+.SS "sector\-map [drive]"
 
 Print a description of the layout of the disc, showing the locations
 of the files.
