[dfs] added tests for valiation of the argument to --drive.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -42,6 +42,13 @@ the
 .B dfs
 command.
 
+.IP "\-\-drive \fID\fR"
+Specifies the drive number to assume to be current when executing the
+specified command, as if the user had executed the command
+.B *DRIVE
+.I D
+but with somewhat narrower validation.
+
 .SH "COMMANDS"
 
 .SS "cat [drive]"
