[doc] fix typo in bbcbasic_to_text.1

--- a/doc/bbcbasic_to_text.1
+++ b/doc/bbcbasic_to_text.1
@@ -18,7 +18,7 @@ BASIC command
 .BR LIST .
 
 .SH OPTIONS
-The following options are undersood:
+The following options are understood:
 .IP "\-d \fID\fR, \-\-dialect \fID\fR"
 Specify which BBC BASIC dialect to assume the input file uses.
 The default is
