--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -543,7 +543,7 @@ lb lb
 l l.
 Variant|Status
 Acorn DFS|Supported.
-Watford DFS|Supported, lightly tested.
+Watford DFS|Supported.  Some differences are described below.
 Opus DFS|Not yet supported.
 Solidisk DFS|Not yet supported.
 HDFS|Not yet supported.
@@ -551,6 +551,15 @@ HDFS|Not yet supported.
 
 What "not yet supported" means in practice is that such images will be
 treated as if they were actually Acorn DFS images.
+
+.SS Watford DFS differences
+
+The CAT output of Watford DFS is actually space-padded to the right so
+that in wide modes (such as mode 0) and on a printer the output of the
+CAT command has four columns.
+The
+.BR dfs (1)
+program does not emulate this feature.
 
 .SH "NOTES"
 
